WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31905
SVG feImage support
https://bugs.webkit.org/show_bug.cgi?id=31905
Summary
SVG feImage support
Dirk Schulze
Reported
2009-11-26 01:21:46 PST
We need basic support for filter effect feImage.
Attachments
SVG feImage support
(25.42 KB, patch)
2009-11-26 06:50 PST
,
Dirk Schulze
no flags
Details
Formatted Diff
Diff
SVG feImage support
(25.56 KB, patch)
2009-12-01 15:02 PST
,
Dirk Schulze
no flags
Details
Formatted Diff
Diff
SVG feImage support
(365.44 KB, patch)
2010-01-06 09:10 PST
,
Dirk Schulze
zimmermann
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Dirk Schulze
Comment 1
2009-11-26 06:50:05 PST
Created
attachment 43919
[details]
SVG feImage support This is the implementation if feImage. It still lacks RenderObject* support, to draw parts of the SVG as image. See
bug 12027
.
Adam Barth
Comment 2
2009-11-30 12:44:04 PST
Attachment 43919
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebCore/svg/SVGImageLoader.cpp:32: Alphabetical sorting problem. [build/include_order] [4] Done processing WebCore/svg/SVGImageLoader.cpp Done processing WebCore/rendering/RenderSVGImage.cpp Done processing WebCore/svg/SVGFEImageElement.h Done processing WebCore/svg/SVGPreserveAspectRatio.h WebCore/svg/SVGPreserveAspectRatio.cpp:176: A case label should not be indented, but line up with its switch statement. [whitespace/indent] [4] WebCore/svg/SVGPreserveAspectRatio.cpp:191: A case label should not be indented, but line up with its switch statement. [whitespace/indent] [4] WebCore/svg/SVGPreserveAspectRatio.cpp:210: A case label should not be indented, but line up with its switch statement. [whitespace/indent] [4] WebCore/svg/SVGPreserveAspectRatio.cpp:227: A case label should not be indented, but line up with its switch statement. [whitespace/indent] [4] Done processing WebCore/svg/SVGPreserveAspectRatio.cpp Done processing WebCore/svg/SVGFEImageElement.cpp Done processing WebCore/svg/graphics/filters/SVGFEImage.h Done processing WebCore/rendering/RenderSVGImage.h WebCore/svg/SVGImageLoader.h:30: Code inside a namespace should not be indented. [whitespace/indent] [4] Done processing WebCore/svg/SVGImageLoader.h Done processing WebCore/svg/graphics/filters/SVGFEImage.cpp Total errors found: 6
Dirk Schulze
Comment 3
2009-12-01 15:02:35 PST
Created
attachment 44105
[details]
SVG feImage support fixed style issues.
WebKit Review Bot
Comment 4
2009-12-01 15:06:52 PST
style-queue ran check-webkit-style on
attachment 44105
[details]
without any errors.
Dirk Schulze
Comment 5
2009-12-04 13:26:02 PST
Comment on
attachment 44105
[details]
SVG feImage support The current patch does not account notifyFinished. I'll upload a new patch.
Dirk Schulze
Comment 6
2010-01-06 09:10:02 PST
Created
attachment 45964
[details]
SVG feImage support SVG feImage support.
WebKit Review Bot
Comment 7
2010-01-06 09:16:00 PST
Attachment 45964
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 Traceback (most recent call last): File "WebKitTools/Scripts/check-webkit-style", line 98, in <module> main() File "WebKitTools/Scripts/check-webkit-style", line 62, in main defaults = style.ArgumentDefaults(style.DEFAULT_OUTPUT_FORMAT, AttributeError: 'module' object has no attribute 'ArgumentDefaults'
Nikolas Zimmermann
Comment 8
2010-01-06 11:58:41 PST
Comment on
attachment 45964
[details]
SVG feImage support Can't remember how many times we reiterated this patch.... it's soo perfect this time :-) Enthusiastically r+ed!
Dirk Schulze
Comment 9
2010-01-06 14:10:50 PST
landed in
r52865
. closing the bug now.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug