2010-01-06  Dirk Schulze  <krit@webkit.org>

Reviewed by Nikolas Zimmermann.

        SVG feImage support
        https://bugs.webkit.org/show_bug.cgi?id=31905

        This implements the SVG Filter effect feImage with support of fragment urls.
        It also includes a bug fix for feComposite. feComposite didn't cover values
        bigger than 255 correctly on composite oeprator arithmetic.

        Tests: There are already many feImage tests in trunk. They just needed updated
               pixel test results.
               The feComposite bug is covered by svg/W3C-SVG-1.1/filters-composite-02-b.svg
               and depends on feImage.

        * platform/graphics/filters/FEComposite.cpp:
        (WebCore::arithmetic):
        * rendering/RenderSVGImage.cpp:
        (WebCore::RenderSVGImage::paint):
        * rendering/RenderSVGImage.h:
        * svg/SVGFEImageElement.cpp:
        (WebCore::SVGFEImageElement::requestImageResource):
        (WebCore::SVGFEImageElement::parseMappedAttribute):
        (WebCore::SVGFEImageElement::notifyFinished):
        (WebCore::SVGFEImageElement::build):
        * svg/SVGFEImageElement.h:
        * svg/SVGFEImageElement.idl:
        * svg/SVGPreserveAspectRatio.cpp:
        (WebCore::SVGPreserveAspectRatio::transformRect):
        * svg/SVGPreserveAspectRatio.h:
        * svg/graphics/filters/SVGFEImage.cpp:
        (WebCore::FEImage::FEImage):
        (WebCore::FEImage::create):
        (WebCore::FEImage::apply):
        * svg/graphics/filters/SVGFEImage.h:

2010-01-06  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        SVG feImage support
        https://bugs.webkit.org/show_bug.cgi?id=31905

        The implementation of feImage requires pixel test result updates of the already
        available tests.

        There is also an update for svg/filters/feComposite.svg, since the patch also
        fixed a bug in feComposite.

        * platform/mac/svg/W3C-SVG-1.1/filters-composite-02-b-expected.checksum:
        * platform/mac/svg/W3C-SVG-1.1/filters-composite-02-b-expected.png:
        * platform/mac/svg/W3C-SVG-1.1/filters-displace-01-f-expected.checksum:
        * platform/mac/svg/W3C-SVG-1.1/filters-displace-01-f-expected.png:
        * platform/mac/svg/W3C-SVG-1.1/filters-image-01-b-expected.checksum:
        * platform/mac/svg/W3C-SVG-1.1/filters-image-01-b-expected.png:
        * platform/mac/svg/custom/feDisplacementMap-01-expected.checksum:
        * platform/mac/svg/custom/feDisplacementMap-01-expected.png:
        * platform/mac/svg/filters/feComposite-expected.checksum:
        * platform/mac/svg/filters/feComposite-expected.png:
        * platform/mac/svg/webarchive/svg-feimage-subresources-expected.checksum:
        * platform/mac/svg/webarchive/svg-feimage-subresources-expected.png:

2010-01-06  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        SVG feImage support
        https://bugs.webkit.org/show_bug.cgi?id=31905

        Update SVG status page. We support feDisplacementMap and feImage now.

        * projects/svg/status.xml:


Canonical link: https://commits.webkit.org/44277@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52865 268f45cc-cd09-0410-ab3c-d52691b4dbfc