WebCore/svg/graphics/filters/SVGFEImage.cpp
@@ -2,6 +2,7 @@
     Copyright (C) 2004, 2005, 2006, 2007 Nikolas Zimmermann <zimmermann@kde.org>
                   2004, 2005 Rob Buis <buis@kde.org>
                   2005 Eric Seidel <eric@webkit.org>
+                  2010 Dirk Schulze <krit@webkit.org>
 
     This library is free software; you can redistribute it and/or
     modify it under the terms of the GNU Library General Public
@@ -23,50 +24,42 @@
 
 #if ENABLE(SVG) && ENABLE(FILTERS)
 #include "SVGFEImage.h"
-#include "SVGRenderTreeAsText.h"
+
 #include "Filter.h"
+#include "GraphicsContext.h"
+#include "SVGPreserveAspectRatio.h"
+#include "SVGRenderTreeAsText.h"
+#include "TransformationMatrix.h"
 
 namespace WebCore {
 
-FEImage::FEImage(CachedImage* cachedImage)
+FEImage::FEImage(RefPtr<Image> image, SVGPreserveAspectRatio preserveAspectRatio)
     : FilterEffect()
-    , m_cachedImage(cachedImage)
+    , m_image(image)
+    , m_preserveAspectRatio(preserveAspectRatio)
 {
-    m_cachedImage->addClient(this);
 }
 
-PassRefPtr<FEImage> FEImage::create(CachedImage* cachedImage)
+PassRefPtr<FEImage> FEImage::create(RefPtr<Image> image, SVGPreserveAspectRatio preserveAspectRatio)
 {
-    return adoptRef(new FEImage(cachedImage));
-}
-
-FEImage::~FEImage()
-{
-    if (m_cachedImage)
-        m_cachedImage->removeClient(this);
-}
-
-CachedImage* FEImage::cachedImage() const
-{
-    return m_cachedImage.get();
-}
-
-void FEImage::setCachedImage(CachedImage* image)
-{
-    if (m_cachedImage == image)
-        return;
-    
-    if (m_cachedImage)
-        m_cachedImage->removeClient(this);
-
-    m_cachedImage = image;
-
-    if (m_cachedImage)
-        m_cachedImage->addClient(this);
+    return adoptRef(new FEImage(image, preserveAspectRatio));
 }
 
 void FEImage::apply(Filter*)
 {
+    if (!m_image.get())
+        return;
+
+    GraphicsContext* filterContext = getEffectContext();
+    if (!filterContext)
+        return;
+
+    FloatRect srcRect(FloatPoint(), m_image->size());
+    FloatRect destRect(FloatPoint(), subRegion().size());
+
+    m_preserveAspectRatio.transformRect(destRect, srcRect);
+
+    filterContext->drawImage(m_image.get(), DeviceColorSpace, destRect, srcRect);
 }
 
 void FEImage::dump()
